# duckdb-vector-index

./: .clang-format  .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  description.yml  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml  docs.yml
docs-site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.ts
docs-site/src/components/: DetailPage.astro  FeatureDetails.tsx  Footer.astro  Header.astro  HierarchyExplorer.tsx  HoverCard.tsx  InstallBar.tsx  MetricAxis.tsx  RadarChart.tsx
docs-site/src/data/: metrics.ts  nodes.ts  release.ts
docs-site/src/layouts/: BaseLayout.astro
docs-site/src/pages/: index.astro
docs-site/src/pages/algorithms/: diskann.astro  hnsw.astro  ivf.astro  spann.astro
docs-site/src/pages/quantizers/: flat.astro  pq.astro  rabitq.astro  scann.astro
docs-site/src/styles/: global.css
scripts/: bootstrap.sh  format.sh
src/: vindex_extension.cpp
src/algo/: CMakeLists.txt
src/algo/diskann/: CMakeLists.txt  diskann_build.cpp  diskann_build.hpp  diskann_core.cpp  diskann_index.cpp  diskann_index.hpp  diskann_module.hpp  diskann_plan.cpp  diskann_pragmas.cpp  diskann_register.cpp
src/algo/hnsw/: CMakeLists.txt  hnsw_build.cpp  hnsw_build.hpp  hnsw_core.cpp  hnsw_index.cpp  hnsw_index.hpp  hnsw_index_scan.cpp  hnsw_index_scan.hpp  hnsw_module.hpp  hnsw_plan.cpp  hnsw_pragmas.cpp  hnsw_register.cpp
src/algo/ivf/: CMakeLists.txt  ivf_build.cpp  ivf_build.hpp  ivf_core.cpp  ivf_index.cpp  ivf_index.hpp  ivf_module.hpp  ivf_plan.cpp  ivf_pragmas.cpp  ivf_register.cpp  kmeans.cpp  kmeans.hpp
src/algo/spann/: CMakeLists.txt  spann_build.cpp  spann_build.hpp  spann_core.cpp  spann_index.cpp  spann_index.hpp  spann_module.hpp  spann_plan.cpp  spann_pragmas.cpp  spann_register.cpp
src/common/: CMakeLists.txt  compact_pragma.cpp  index_block_store.cpp  index_macros.cpp  metric.cpp  optimize_expr.cpp  optimize_join.cpp  optimize_scan.cpp  optimize_topk.cpp  vector_index.cpp  vector_index_registry.cpp  vector_index_scan.cpp
src/include/: vindex_extension.hpp
src/include/vindex/: diskann_core.hpp  hnsw_core.hpp  index_block_store.hpp  ivf_core.hpp  metric.hpp  pq_quantizer.hpp  quantizer.hpp  scann_quantizer.hpp  spann_core.hpp  vector_index.hpp  vector_index_registry.hpp  vector_index_scan.hpp
src/quant/: CMakeLists.txt
src/quant/flat/: CMakeLists.txt  flat_quantizer.cpp
src/quant/pq/: CMakeLists.txt  pq_quantizer.cpp
src/quant/rabitq/: CMakeLists.txt  rabitq_kernels.cpp  rabitq_kernels.hpp  rabitq_quantizer.cpp  rabitq_quantizer.hpp  rabitq_rotate.cpp  rabitq_rotate.hpp
src/quant/scann/: CMakeLists.txt  scann_quantizer.cpp
test/bench/: CMakeLists.txt  bench_hnsw_core.cpp  datasets.py  run_recall.py
test/python/: smoke_test.py
test/sql/common/: combo_matrix.test  compact_pragma.test  drop_column_guard.test  extension_loads.test  session_pragmas.test
test/sql/diskann/: diskann_basic.test  diskann_persist.test  diskann_pq.test  diskann_pragma.test  diskann_rabitq.test  diskann_scann.test
test/sql/hnsw/: hnsw_basic.test  hnsw_crud.test  hnsw_deprecated_aliases.test  hnsw_experimental_persistence.test  hnsw_insert.test  hnsw_insert_wal.test  hnsw_join_macro.test  hnsw_lateral_join.test  hnsw_lateral_join_group.test  hnsw_metrics.test  hnsw_options.test  hnsw_pq.test  hnsw_projection.test  hnsw_rerank.test  hnsw_result.test  hnsw_rewrite.test  hnsw_scann.test  hnsw_topk.test  where_clause_segfault.test
test/sql/ivf/: ivf_basic.test  ivf_persist.test  ivf_pq.test  ivf_pragma.test  ivf_rabitq.test  ivf_scann.test
test/sql/rabitq/: rabitq_basic.test
test/sql/spann/: spann_basic.test  spann_persist.test  spann_pq.test  spann_pragma.test  spann_rabitq.test  spann_scann.test
test/unit/: CMakeLists.txt  test_diskann_core.cpp  test_flat_quantizer.cpp  test_hnsw_core.cpp  test_index_block_store.cpp  test_ivf_core.cpp  test_kmeans.cpp  test_metric.cpp  test_pq_quantizer.cpp  test_rabitq_kernels.cpp  test_rabitq_quantizer.cpp  test_rabitq_rotate.cpp  test_scann_quantizer.cpp  test_spann_core.cpp
